--- a/sections/main-product.liquid
+++ b/sections/main-product.liquid
@@ -271,6 +271,12 @@
                 </button>
               </quantity-input>
             </div>
+            {%- when 'inventory_count' -%} 
+              <div id="inventory-{{ section.id }}" {{ block.shopify_attributes }} style="color: {{ block.settings.text_color }};"> 
+                {% if product.selected_or_first_available_variant.inventory_quantity <= block.settings.show_inventory_threshold or block.settings.show_inventory_threshold == 0 %} 
+                    <p>Only <strong>{{ product.selected_or_first_available_variant.inventory_quantity }}</strong> left in stock</p> 
+                {% endif %} 
+              </div>
           {%- when 'popup' -%}
               <modal-opener class="product-popup-modal__opener no-js-hidden" data-modal="#PopupModal-{{ block.id }}" {{ block.shopify_attributes }}>
                 <button id="ProductPopup-{{ block.id }}" class="product-popup-modal__button link" type="button" aria-haspopup="dialog">{{ block.settings.text | default: block.settings.page.title }}</button>
@@ -697,6 +703,25 @@
       "type": "quantity_selector",
       "name": "t:sections.main-product.blocks.quantity_selector.name",
       "limit": 1
+    },
+    {
+      "type": "inventory_count",
+      "name": "Inventory Count",
+      "limit": 1,
+      "settings": [
+        {
+          "type": "number",
+          "id": "show_inventory_threshold",
+          "label": "Show Inventory Threshold",
+          "default": 0,
+          "info": "Show the inventory count if it falls to this number. Leave at 0 to always show inventory."
+        },
+        {
+          "type": "color",
+          "id": "text_color",
+          "label": "Text Color"
+        }
+      ]
     },
     {
       "type": "variant_picker",
